@@ -6,6 +6,11 @@ https://github.com/petdance/test-www-mechanize/issues
 
 NEXT
 ------------------------------------
+[ENHANCEMENTS]
+Use ok() instead of cmp_ok() inside of lacks_uncapped_inputs().
+This output makes more sense.
+
+
 [FIXES]
 Fixed the subtest name inside of C<lacks_ids_ok>.
 
